# rust-ts-static-template

./: .gitignore  .gitmodules  Cargo.toml  build.sh  build_release.sh  index.html  package-lock.json  package.json  setup.sh  tsconfig.json  watch_reload.js
src/: lib.rs
ts/: entry.tsx
