[package]
name = "{{project-name}}"
version = "0.0.1"
authors = ["{{authors}}"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
opt-level = 3

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3.50"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.3"
threadpool = "1.8.1"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  "console"
]

# [[bin]]
# name = "arena"
# path = "src/main.rs"